# clx

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  build.bat  build.sh  index.html
.github/ISSUE_TEMPLATE/: bug_report.yml  edge_case.yml  feature_request.yml  lua_compatibility.yml  performance_regression.yml
.github/workflows/: ci.yml  deploy-www.yml  minify_html.py  release.yml
benchmarks/: 3ddist.lua  ackermann.lua  arraysum.lua  binarytrees.lua  binarytrees_luajit.lua  bubble.lua  canada.lua  coro.lua  fannkuchredux.lua  fasta.lua  fasta_luajit.lua  fib.lua  hashtable.lua  json.lua  knucleotide.lua  life.lua  mandelbrot.lua  mandelbrot_luajit.lua  nbody.lua  pi.lua  run-hyperfine.sh  run.bat  run.sh  sieve.lua  spectralnorm.lua
doc/: api.md  architecture.md  benchmarks.md  cli.md  compatibility.md  getting-started.md  index.md  migration-guide.md  modules.md  optimizations.md  runtime.md
examples/hello/: README.md  hello.lua
examples/mandelbrot/: README.md  build.bat  build.sh  mandelbrot.lua
examples/pong/: README.md  build.bat  build.sh  pong.lua
examples/sokol/: build.bat  build.sh  sokol_clx.cpp
examples/sokol/sokol/: sokol_app.h  sokol_gfx.h
examples/sokol/sokol/tests/ext/: fontstash.h  nuklear.h  stb_truetype.h
examples/sokol/sokol/util/: sokol_framebuffer.h
include/: clx.h  clx_runtime.h  clx_simd.h
src/: clx.cpp
src/codegen/: codegen.cpp  codegen.h
src/optimizer/: analysis_state.h  optimizer.cpp  optimizer.h
src/runtime/: base.cpp  coro_switch_aarch64.s  coroutine.cpp  io.cpp  math.cpp  openlibs.cpp  os.cpp  package.cpp  runtime.cpp  strings.cpp  table.cpp  utf8.cpp
src/syntax/: lexer.cpp  lexer.h  nodes.h  parser.cpp  parser.h  visitor.cpp  visitor.h
tests/: run.bat  run.sh
tests/conformance/: arithmetic.lua  base_api.lua  conditions.lua  control_flow.lua  coroutines.lua  error.lua  functions.lua  gc.lua  io.lua  logic.lua  loops.lua  metatable.lua  mymod.lua  native_mod.cpp  operators.lua  os.lua  package.lua  scope.lua  string.lua  strings.lua  table.lua  test_native_mod.lua  utf8.lua  vars.lua
tests/edge_cases/: deep_binops.lua  massive_table.lua  scope_hell.lua  stringbuilder.lua  type_inference.lua
tests/realworld/30log/: test.lua
tests/realworld/ansicolors/: test.lua
tests/realworld/argparse/: test.lua
tests/realworld/classic/: test.lua
tests/realworld/dkjson/: test.lua
tests/realworld/fun/: test.lua
tests/realworld/inspect/: test.lua
tests/realworld/lume/: test.lua
tests/realworld/lunajson/: test.lua
tests/realworld/middleclass/: test.lua
tests/realworld/serpent/: test.lua
tests/regression/: cacheslot.lua  edgecases.lua  for_in_native.lua  goto_hoist.lua  non_numeric_keys.lua  pure_numeric_array.lua
tests/stress/: stress.lua
www/: index.html
